--- a/style.css
+++ b/style.css
@@ -96,6 +96,27 @@ input {
   background-color: burlywood;
 }
 
+.heading {
+  font-weight: 600;
+  margin-left: 20px;
+  font-size: 2rem;
+}
+.cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+  margin: 20px;
+}
+.card {
+  border: 1px solid gray;
+  border-radius: 10px;
+
+  padding: 4% 7%;
+  display: grid;
+  grid-template: auto 1fr auto/1fr;
+  gap: 5px;
+  height: 150px;
+}
 .sidebar {
   background-color: seashell;
 }
