--- a/style.css
+++ b/style.css
@@ -117,6 +117,33 @@ input {
   gap: 5px;
   height: 150px;
 }
+
 .sidebar {
   background-color: seashell;
+}
+
+.sidebar > .heading {
+  margin: 0;
+}
+.announcements {
+  display: grid;
+  gap: 5px;
+  border: 1px solid gray;
+  border-radius: 10px;
+  padding: 5% 5%;
+  margin: 20px 0px;
+}
+
+.announcement {
+  padding: 0px 10px;
+}
+
+.separator {
+  height: 1px;
+  background-color: goldenrod;
+}
+
+.announcement > p {
+  margin: 0;
+  padding: 0;
 }
