--- a/style.css
+++ b/style.css
@@ -147,3 +147,17 @@ input {
   margin: 0;
   padding: 0;
 }
+
+.trending {
+  display: grid;
+  margin: 20px 0px;
+  justify-content: center;
+  gap: 20px;
+
+  border: 1px solid gray;
+  border-radius: 10px;
+}
+.trending-element {
+  display: flex;
+  gap: 5px;
+}
