Finish card styling

--- a/style.css
+++ b/style.css
@@ -111,15 +111,18 @@ input {
   margin: 20px;
 }
 .card {
-  border: 1px solid gray;
-  border-radius: 10px;
+  border-left: 7px solid var(--accent-color);
+  border-radius: 8px;
   background-color: var(--primary-color);
 
-  padding: 4% 7%;
+  padding: 10% 7%;
   display: grid;
   grid-template: auto 1fr auto/1fr;
   gap: 5px;
   height: 150px;
+}
+.card > .bold {
+  font-size: 1.1rem;
 }
 
 .sidebar {
@@ -157,6 +160,7 @@ input {
 .trending {
   display: grid;
   margin: 20px 0px;
+  padding: 5%;
   justify-content: center;
   gap: 20px;
 
@@ -166,6 +170,7 @@ input {
 }
 .trending-element {
   display: flex;
+  align-items: center;
   gap: 15px;
 }
 
