--- a/style.css
+++ b/style.css
@@ -136,10 +136,9 @@ input {
   display: grid;
   gap: 5px;
 
-  border: 1px solid gray;
   background-color: var(--primary-color);
   border-radius: 10px;
-  padding: 5% 5%;
+  padding: 11% 4%;
   margin: 20px 0px;
 }
 
@@ -150,6 +149,7 @@ input {
 .separator {
   height: 1px;
   background-color: var(--bg-color);
+  margin: 10px 0px;
 }
 
 .announcement > p {
@@ -164,7 +164,6 @@ input {
   justify-content: center;
   gap: 20px;
 
-  border: 1px solid gray;
   border-radius: 10px;
   background-color: var(--primary-color);
 }
