--- a/style.css
+++ b/style.css
@@ -52,6 +52,8 @@ a:visited {
   gap: 10px;
   display: grid;
   grid-template: 1fr 1.25fr / 2fr 1fr;
+
+  box-shadow: 10px -5px 15px;
 }
 .search {
   display: flex;
@@ -107,7 +109,7 @@ input {
 .cards {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 20px;
+  gap: 30px;
   margin: 20px;
 }
 .card {
@@ -176,4 +178,9 @@ input {
 /* explicit styles */
 .bold {
   font-weight: 600;
+}
+
+.shadow,
+.card {
+  box-shadow: 0px 8px 7px -10px;
 }
