--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ a:visited {
 .main {
   background-color: var(--bg-color);
   display: grid;
-  grid-template: 150px 1fr / 1fr;
+  grid-template: 160px 1fr / 1fr;
 }
 
 .header {
@@ -94,19 +94,21 @@ input {
 }
 .profile {
   display: flex;
-  gap: 5%;
+  gap: 2%;
   align-items: center;
 }
 .btns {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  gap: 10%;
 }
 .btn {
+  flex: 1;
   color: var(--primary-color);
   background-color: var(--secondary-color);
   border-radius: 25px;
-  padding: 2% 7%;
+  padding: 2.5% 7%;
+  text-align: center;
 }
 
 .content {
@@ -201,4 +203,9 @@ input {
 .shadow,
 .card {
   box-shadow: 0px 8px 7px -10px;
+}
+
+.pfp {
+  background-color: var(--accent-color);
+  border-radius: 50%;
 }
