Add system font stack and Roboto font

--- a/style.css
+++ b/style.css
@@ -7,12 +7,14 @@ body {
   height: 100%;
   display: grid;
   grid-template: 1fr/ 1fr 4.5fr;
+  font-family: "Roboto", system-ui, "Segoe UI", Roboto, Helvetica, Arial,
+    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 :root {
   --primary-color: #fafaf9;
-  --secondary-color: #0284c7;
-  --accent-color: #facc15;
+  --secondary-color: #3b82f6;
+  --accent-color: #f59e0b;
   --bg-color: #cbd5e1;
   --icon: #34d399;
 }
@@ -217,7 +219,7 @@ input {
 }
 /* explicit styles */
 .bold {
-  font-weight: 600;
+  font-weight: 500;
 }
 
 .shadow,
@@ -237,6 +239,6 @@ input {
 .card > .text,
 .announcement > p,
 .trending-element > div > div:nth-child(2) {
-  font-weight: 200;
+  font-weight: 300;
   color: gray;
 }
