--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ ul {
   align-items: center;
   gap: 1rem;
   text-decoration-line: none;
+  font-weight: 600;
 }
 a:visited {
   color: inherit;
@@ -117,7 +118,7 @@ input {
 .content {
   padding: 20px;
   display: grid;
-  grid-template: 1fr / 2.5fr 1fr;
+  grid-template: 1fr / 2.75fr 1fr;
   gap: 20px;
 }
 .projects {
@@ -228,11 +229,11 @@ input {
 }
 
 .pfp {
-  background-color: var(--accent-color);
+  background-color: #facc15;
   border-radius: 50%;
 }
 .heading {
-  font-weight: 600;
+  font-weight: 500;
   margin-left: 20px;
   font-size: 1.6rem;
 }
